--- a/heeba/pubspec.yaml
+++ b/heeba/pubspec.yaml
@@ -30,10 +30,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  http: ^1.2.2
+  provider: ^6.0.0 # Assuming you're using provider as per your code
+  google_fonts: ^6.2.1
   cupertino_icons: ^1.0.8
+  shared_preferences: ^2.3.0
+  file_picker: ^8.1.2
+  web_socket_channel: ^3.0.1
 
 dev_dependencies:
   flutter_test:
